src/gatus/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus-svc
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: gatus
