src/gatus/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  annotations: 
    kubernetes.io/ingress.className: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: gatus.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: gatus-svc
            port:
              number: 8080
  tls:
    - hosts:
      - gatus.lan
      secretName: gatus-tls-secret
